WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37027
REGRESSION: Animated SVG images as CSS image backgrounds no longer repaint correctly
https://bugs.webkit.org/show_bug.cgi?id=37027
Summary
REGRESSION: Animated SVG images as CSS image backgrounds no longer repaint co...
Simon Fraser (smfr)
Reported
2010-04-02 10:14:42 PDT
The pixel result of the fast/backgrounds/animated-svg-as-background.html test shows that repaints of animated SVG as CSS image backgrounds is broken (again).
Attachments
Fix for regression
(1.06 KB, patch)
2010-04-05 10:56 PDT
,
Adam Treat
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-04-02 10:18:02 PDT
fast/images/animated-svg-as-image.html also broken
Simon Fraser (smfr)
Comment 2
2010-04-02 10:39:30 PDT
http://trac.webkit.org/changeset/55675
Simon Fraser (smfr)
Comment 3
2010-04-02 11:31:03 PDT
SVGImage.cpp has a repaint() method in the chrome client that wasn't fixed up.
Adam Treat
Comment 4
2010-04-05 10:56:21 PDT
Created
attachment 52543
[details]
Fix for regression Attempted fix for regression
Darin Adler
Comment 5
2010-04-05 11:33:05 PDT
Comment on
attachment 52543
[details]
Fix for regression Is there any good way to regression-test this? r=me
Adam Treat
Comment 6
2010-04-05 12:28:12 PDT
Fixed with
r57089
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug