Fix regression in pixel test for animated svg background images.

Patch by Adam Treat <atreat@rim.com> on 2010-04-05
Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=37027

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImageChromeClient::invalidateContentsAndWindow):

Canonical link: https://commits.webkit.org/48382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57089 268f45cc-cd09-0410-ab3c-d52691b4dbfc